# casadi-examples-cpp

./: CMakeLists.txt  README.md
example/: example_basic_operations.cpp  example_racecar.cpp  example_use_nlp_external.cpp
